deleted gap in head, corrected name element, added spaces between different rules

--- a/src/styles/blocks/card.css
+++ b/src/styles/blocks/card.css
@@ -30,7 +30,7 @@ html {
   margin-bottom: 4px;
 }
 
-.card_product-code {
+.card__product-code {
   font-size: 10px;
   line-height: 14px;
   color: #616070;
@@ -71,16 +71,21 @@ html {
 .card__buy {
   display: flex;
   justify-content: center;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
+  color: #fff;
+
   text-decoration: none;
   text-transform: uppercase;
-  background: #00acdc;
+
+  background-color: #00acdc;
   border: 1px solid transparent;
   border-radius: 5px;
-  color: #fff;
-  transition: 0.4s;
+
+  transition: color 0.4s, background-color 0.4s;
+
   padding: 12px 0;
   margin-bottom: 16px;
 }
